--- a/src/styles/global/fonts.css
+++ b/src/styles/global/fonts.css
@@ -117,3 +117,11 @@
   font-style: italic;
   font-display: swap;
 }
+
+@font-face {
+  font-family: "Roboto";
+  src: url('/fonts/Roboto-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
